--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "portfolio-v2",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "module", 
+
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-audio-visualize": "^1.2.0",
     "react-dom": "^18.2.0",
